--- a/app/src/main/res/layout/base_window_layout_marine.xml
+++ b/app/src/main/res/layout/base_window_layout_marine.xml
@@ -6,6 +6,8 @@
     android:animateLayoutChanges="true"
     android:focusable="false"
     android:focusableInTouchMode="false"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".applicationMain.BaseWindowActivity"
     >
     <LinearLayout
         android:id="@+id/baseWindowRootLinearLayout"
