--- a/app/src/main/res/drawable/main_header_accent.xml
+++ b/app/src/main/res/drawable/main_header_accent.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="18sp"
+    android:height="3sp"
     android:width="130sp"
-    android:viewportHeight="18"
+    android:viewportHeight="3"
     android:viewportWidth="130"
     android:autoMirrored="true"
+    android:tint="?bluelineconsoleAccentColor"
     >
     <path
-        android:pathData="M0,18 L0,0 L119.61,0 L130,18"
-        android:fillColor="?bluelineconsoleFrameColor" />
-    <path
         android:pathData="M0,3 L121.341667,3 L119.61,0 L0,0"
-        android:fillColor="?bluelineconsoleAccentColor" />
+        android:fillColor="#ffffff" />
 </vector>
