--- a/app/src/main/res/layout/main_activity_body.xml
+++ b/app/src/main/res/layout/main_activity_body.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainRootLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -34,6 +35,8 @@
             android:background="?android:colorBackground"
             android:imeOptions="actionGo|flagForceAscii|flagNoExtractUi|flagNoFullscreen"
             android:animateLayoutChanges="true"
+            tools:ignore="LabelFor"
+            android:importantForAutofill="no"
             >
             <requestFocus/>
         </EditText>
