--- a/app/src/main/res/layout/preferences_activity_body.xml
+++ b/app/src/main/res/layout/preferences_activity_body.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:paddingVertical="0px"
@@ -9,6 +10,7 @@
     android:orientation="horizontal"
     android:background="?android:colorBackground"
     android:fillViewport="true"
+    tools:ignore="Overdraw"
     >
     <FrameLayout
         android:layout_height="wrap_content"
