--- a/app/src/main/res/layout/preferences_custom_web_each_body.xml
+++ b/app/src/main/res/layout/preferences_custom_web_each_body.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
+    tools:ignore="Overdraw"
     >
     <LinearLayout
         android:layout_width="match_parent"
