minor improvement and fix

--- a/app/src/main/res/layout/base_window_layout_default.xml
+++ b/app/src/main/res/layout/base_window_layout_default.xml
@@ -29,6 +29,9 @@
             android:layout_gravity="start"
             android:orientation="horizontal"
             android:animateLayoutChanges="true"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:clickable="true"
             >
             <LinearLayout
                 android:layout_width="3sp"
@@ -36,12 +39,20 @@
                 android:id="@+id/baseWindowDefaultThemeHeaderStartAccent"
                 android:background="?bluelineconsoleAccentColor"
                 android:orientation="horizontal"
+                android:animateLayoutChanges="true"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 />
             <LinearLayout
+                android:id="@+id/baseWindowDefaultThemeHeaderImagePart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/main_header_background"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:animateLayoutChanges="true"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                >
                 <!-- Sizes here must be consistent with corresponding drawables -->
                 <ImageView
                     android:layout_width="wrap_content"
@@ -49,6 +60,8 @@
                     android:id="@+id/baseWindowDefaultThemeHeaderAccent"
                     android:background="@drawable/main_header_accent"
                     tools:ignore="ContentDescription"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     />
                 <TextView
                     android:clickable="false"
@@ -77,6 +90,9 @@
             android:orientation="vertical"
             android:layout_gravity="center"
             android:animateLayoutChanges="true"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:clickable="true"
             >
             <LinearLayout
                 android:id="@+id/baseWindowMainLinearLayout"
@@ -88,6 +104,8 @@
                 android:orientation="vertical"
                 android:background="?bluelineconsoleFrameColor"
                 android:animateLayoutChanges="true"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 >
                 <ViewStub
                     android:layout_width="match_parent"
@@ -110,12 +128,18 @@
             android:layout_gravity="end"
             android:orientation="horizontal"
             android:animateLayoutChanges="true"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:clickable="true"
             >
             <LinearLayout
+                android:id="@+id/baseWindowDefaultThemeFooterImagePart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/main_footer_background"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:animateLayoutChanges="true"
+                >
                 <!-- Sizes here must be consistent with corresponding drawables -->
                 <TextView
                     android:clickable="false"
@@ -137,6 +161,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     />
                 <ImageView
                     android:id="@+id/baseWindowDefaultThemeFooterAccent"
@@ -144,6 +170,8 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/main_footer_accent"
                     tools:ignore="ContentDescription"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     />
             </LinearLayout>
             <LinearLayout
@@ -152,6 +180,9 @@
                 android:layout_height="match_parent"
                 android:background="?bluelineconsoleAccentColor"
                 android:orientation="vertical"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:animateLayoutChanges="true"
                 />
         </LinearLayout>
     </LinearLayout>
