--- a/app/src/main/res/layout/main_activity_body.xml
+++ b/app/src/main/res/layout/main_activity_body.xml
@@ -61,19 +61,25 @@
                 android:orientation="horizontal"
                 android:padding="20dp"
                 android:gravity="top"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 >
                 <ProgressBar
                     android:layout_width="72dp"
                     android:layout_height="72dp"
                     android:paddingStart="0dp"
                     android:paddingEnd="20dp"
-                    style="?android:attr/progressBarStyle"/>
-
+                    style="?android:attr/progressBarStyle"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="10dp"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     >
                     <TextView
                         android:layout_width="wrap_content"
@@ -83,6 +89,8 @@
                         android:text="@string/loading_main_caption"
                         android:textSize="18sp"
                         android:textColor="?bluelineconsoleBaseTextColor"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
                         />
                     <TextView
                         android:layout_width="wrap_content"
@@ -90,6 +98,8 @@
                         android:text="@string/loading_detail_for_command_search"
                         android:textSize="15sp"
                         android:textColor="?bluelineconsoleBaseTextColor"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
                         />
                 </LinearLayout>
             </LinearLayout>
