--- a/app/src/main/res/layout/preferences_accent_color.xml
+++ b/app/src/main/res/layout/preferences_accent_color.xml
@@ -57,6 +57,7 @@
             tools:ignore="ContentDescription"
             />
         <TableLayout
+            android:id="@+id/pref_accent_color_seek_bar_table"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
