--- a/app/src/main/res/layout/base_window_layout_default.xml
+++ b/app/src/main/res/layout/base_window_layout_default.xml
@@ -22,6 +22,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         >
+        <!-- Linter complaints clickable and not focusable, not accesible from keyboard. No problem, this is just not to pass click event and dismiss -->
         <LinearLayout
             android:id="@+id/baseWindowHeaderWrapper"
             android:layout_height="wrap_content"
@@ -32,6 +33,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:clickable="true"
+            tools:ignore="KeyboardInaccessibleWidget"
             >
             <LinearLayout
                 android:layout_width="3sp"
@@ -79,8 +81,9 @@
                     />
             </LinearLayout>
         </LinearLayout>
+        <!-- Linter complaints clickable and not focusable, not accesible from keyboard. No problem, this is just not to pass click event and dismiss -->
         <LinearLayout
-            android:id="@+id/baseWindowMainLinearLayoutOuter"
+            android:id="@+id/baseWindowDefaultThemeMainLinearLayoutOuter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingVertical="0sp"
@@ -93,6 +96,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:clickable="true"
+            tools:ignore="KeyboardInaccessibleWidget"
             >
             <LinearLayout
                 android:id="@+id/baseWindowMainLinearLayout"
@@ -120,6 +124,7 @@
           layout_marginTop is actually set to -(18sp + 1 physical pixel).
           BaseWindowActivity.onCreate() decrease 1 physical pixel from layout_marginTop.
         -->
+        <!-- Linter complaints clickable and not focusable, not accesible from keyboard. No problem, this is just not to pass click event and dismiss -->
         <LinearLayout
             android:id="@+id/baseWindowFooterWrapper"
             android:layout_width="wrap_content"
@@ -131,6 +136,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:clickable="true"
+            tools:ignore="KeyboardInaccessibleWidget"
             >
             <LinearLayout
                 android:id="@+id/baseWindowDefaultThemeFooterImagePart"
