--- a/app/src/main/res/layout/url_entry_view.xml
+++ b/app/src/main/res/layout/url_entry_view.xml
@@ -12,19 +12,43 @@
     android:gravity="center_vertical"
     android:duplicateParentState="true"
     >
-    <TextView
-        android:id="@+id/urlDisplayNameOnEntryView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:clickable="false"
-        android:focusable="false"
-        android:textColor="?bluelineconsoleBaseTextColor"
-        android:textStyle="bold"
-        />
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:id="@+id/urlDisplayNameOnEntryView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:clickable="false"
+            android:focusable="false"
+            android:textColor="?bluelineconsoleBaseTextColor"
+            android:textStyle="bold"
+            />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+        />
+        <TextView
+            android:id="@+id/urlDisabledOnEntryView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:clickable="false"
+            android:focusable="false"
+            android:textColor="?bluelineconsoleBaseTextColor"
+            android:textStyle="italic"
+            android:text="@string/preferences_url_property_disabled"
+            android:visibility="gone"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
@@ -45,6 +69,23 @@
             android:focusable="false"
             android:textColor="?bluelineconsoleBaseTextColor"
             />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            />
+        <TextView
+            android:id="@+id/urlPresetOnEntryView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:clickable="false"
+            android:focusable="false"
+            android:textColor="?bluelineconsoleBaseTextColor"
+            android:textStyle="italic"
+            android:text="@string/preferences_url_property_preset"
+            android:visibility="gone"
+            />
     </LinearLayout>
-
 </LinearLayout>
